generated/manifests/prod-axon/llama-cpp/Deployment-llama-cpp-gpt-oss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: llama-cpp-gpt-oss
    app.kubernetes.io/name: llama-cpp-gpt-oss
  name: llama-cpp-gpt-oss
  namespace: ai
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: llama-cpp-gpt-oss
      app.kubernetes.io/name: llama-cpp-gpt-oss
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: llama-cpp-gpt-oss
        app.kubernetes.io/name: llama-cpp-gpt-oss
        den.ai/engine: llama-cpp
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: LLAMA_ARG_ALIAS
              value: gpt-oss-20b
            - name: LLAMA_ARG_CTX_SIZE
              value: "16384"
            - name: LLAMA_ARG_ENDPOINT_METRICS
              value: "1"
            - name: LLAMA_ARG_HF_REPO
              value: ggml-org/gpt-oss-20b-GGUF:MXFP4
            - name: LLAMA_ARG_N_GPU_LAYERS
              value: "99"
            - name: LLAMA_ARG_PORT
              value: "8080"
            - name: LLAMA_CACHE
              value: /models
          image: ghcr.io/ggml-org/llama.cpp@sha256:be8d64a2a05b11ddaf5799c544b0d96f8d9a09fb065e8d117cafa7f03e533896
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          name: main
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            limits:
              amd.com/gpu: 1
              cpu: 6000m
              memory: 24Gi
            requests:
              amd.com/gpu: 1
              cpu: 500m
              memory: 2Gi
          startupProbe:
            failureThreshold: 180
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 10
          volumeMounts:
            - mountPath: /models
              name: models
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: llama-cpp-gpt-oss
      volumes:
        - name: models
          persistentVolumeClaim:
            claimName: llama-cpp-gpt-oss
