generated/manifests/prod-axon/llama-cpp/Service-llama-cpp-gpt-oss-internal.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    lbipam.cilium.io/ips: 10.11.0.22
  labels:
    app.kubernetes.io/instance: llama-cpp-gpt-oss
    app.kubernetes.io/name: llama-cpp-gpt-oss
    app.kubernetes.io/service: llama-cpp-gpt-oss-internal
  name: llama-cpp-gpt-oss-internal
  namespace: ai
spec:
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: llama-cpp-gpt-oss
    app.kubernetes.io/name: llama-cpp-gpt-oss
  type: LoadBalancer
