generated/manifests/prod-axon/llama-cpp/Service-llama-cpp-gpt-oss.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: llama-cpp-gpt-oss
    app.kubernetes.io/name: llama-cpp-gpt-oss
    app.kubernetes.io/service: llama-cpp-gpt-oss
  name: llama-cpp-gpt-oss
  namespace: ai
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: llama-cpp-gpt-oss
    app.kubernetes.io/name: llama-cpp-gpt-oss
  type: ClusterIP
